# cleanmarl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
cleanmarl/: coma.py  mappo_3chase1_unity.py  mappo_unity.py  qmix_lstm.py  qmix_memefficient.py
cleanmarl/algorithms/: __init__.py  mappo.py
cleanmarl/models/: __init__.py  actor.py  critic.py
scripts/: train_mappo_3chase1_unity.py
